--- a/sass/_foot.scss
+++ b/sass/_foot.scss
@@ -258,3 +258,7 @@
 #youtube {
   background: url('../img/pictograms/spritesheet.png') -175px 0;
 }
+
+header, nav, main, aside, footer, article, section {
+  display: block;
+}
