--- a/css/style.css
+++ b/css/style.css
@@ -541,7 +541,8 @@ body {
     .menu .page-scroll:hover {
       color: #fce38a; }
     .menu .page-scroll.active {
-      color: #fce38a; }
+      color: #fce38a;
+      border-bottom: 4px solid #fce38a; }
 
 /* RESPONSIVE */
 @media only screen and (max-width: 768px) {
