--- a/css/style.css
+++ b/css/style.css
@@ -387,13 +387,25 @@
     width: 100%;
     height: 100%;
     opacity: 0.1; }
-  #banner .banner__info--first {
+  #banner .banner__info--first p {
     font-family: 'Kaushan Script', cursive;
     text-transform: capitalize;
     font-size: 65px;
     color: white;
     margin-top: 10%; }
-  #banner .banner__info--second {
+    @media (max-width: 1200px) {
+      #banner .banner__info--first p {
+        font-size: 55px; } }
+    @media (max-width: 992px) {
+      #banner .banner__info--first p {
+        font-size: 45px; } }
+    @media (max-width: 768px) {
+      #banner .banner__info--first p {
+        font-size: 40px; } }
+    @media (max-width: 500px) {
+      #banner .banner__info--first p {
+        font-size: 20px; } }
+  #banner .banner__info--second p {
     text-transform: uppercase;
     font-size: 120px;
     font-family: 'Montserrat', sans-serif;
@@ -401,6 +413,22 @@
     line-height: 110px;
     margin-top: 2%;
     color: white; }
+    @media (max-width: 1200px) {
+      #banner .banner__info--second p {
+        font-size: 100px;
+        line-height: 90px; } }
+    @media (max-width: 992px) {
+      #banner .banner__info--second p {
+        font-size: 80px;
+        line-height: 70px; } }
+    @media (max-width: 768px) {
+      #banner .banner__info--second p {
+        font-size: 70px;
+        line-height: 60px; } }
+    @media (max-width: 500px) {
+      #banner .banner__info--second p {
+        font-size: 30px;
+        line-height: 35px; } }
   #banner .banner__info__bar {
     display: inline-block;
     border: 2px solid white;
@@ -456,34 +484,6 @@
     #banner .banner__slider .active-slide {
       opacity: 1; }
 
-@media (max-width: 1200px) {
-  .banner__info--first {
-    font-size: 55px !important; }
-
-  .banner__info--second {
-    font-size: 100px !important;
-    line-height: 90px !important; } }
-@media (max-width: 992px) {
-  .banner__info--first {
-    font-size: 45px !important; }
-
-  .banner__info--second {
-    font-size: 80px !important;
-    line-height: 70px !important; } }
-@media (max-width: 768px) {
-  .banner__info--first {
-    font-size: 40px !important; }
-
-  .banner__info--second {
-    font-size: 70px !important;
-    line-height: 60px !important; } }
-@media (max-width: 500px) {
-  .banner__info--first {
-    font-size: 20px !important; }
-
-  .banner__info--second {
-    font-size: 30px !important;
-    line-height: 35px !important; } }
 /* BASE */
 html,
 body {
