--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -15,20 +15,52 @@
     opacity: 0.1;
   }
   .banner__info--first{
-    font-family: 'Kaushan Script', cursive;
-    text-transform: capitalize;
-    font-size: 65px;
-    color: white;
-    margin-top: 10%;
+    p{
+      font-family: 'Kaushan Script', cursive;
+      text-transform: capitalize;
+      font-size: 65px;
+      color: white;
+      margin-top: 10%;
+      @media(max-width:$md){
+        font-size: 55px;
+      }
+      @media(max-width:$sm){
+        font-size: 45px;
+      }
+      @media(max-width:$xs){
+        font-size: 40px;
+      }
+      @media(max-width:500px){
+        font-size: 20px;
+      }
+    }
   }
   .banner__info--second{
-    text-transform: uppercase;
-    font-size: 120px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    line-height: 110px;
-    margin-top: 2%;
-    color: white;
+    p{
+      text-transform: uppercase;
+      font-size: 120px;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 900;
+      line-height: 110px;
+      margin-top: 2%;
+      color: white;
+      @media(max-width:$md){
+        font-size: 100px;
+        line-height: 90px;
+      }
+      @media(max-width:$sm){
+        font-size: 80px;
+        line-height: 70px;
+      }
+      @media(max-width:$xs){
+        font-size: 70px;
+        line-height: 60px;
+      }
+      @media(max-width:500px){
+        font-size: 30px;
+        line-height: 35px;
+      }
+    }
   }
   .banner__info__bar{
     display:inline-block;
@@ -92,41 +124,5 @@
     .active-slide{
       opacity:1;
     }
-  }
-}
-@media(max-width:$md){
-  .banner__info--first{
-    font-size: 55px !important;
-  }
-  .banner__info--second{
-    font-size: 100px !important;
-    line-height: 90px !important;
-  }
-}
-@media(max-width:$sm){
-  .banner__info--first{
-    font-size: 45px !important;
-  }
-  .banner__info--second{
-    font-size: 80px !important;
-    line-height: 70px !important;
-  }
-}
-@media(max-width:$xs){
-  .banner__info--first{
-    font-size: 40px !important;
-  }
-  .banner__info--second{
-    font-size: 70px !important;
-    line-height: 60px !important;
-  }
-}
-@media(max-width:500px){
-  .banner__info--first{
-    font-size: 20px !important;
-  }
-  .banner__info--second{
-    font-size: 30px !important;
-    line-height: 35px !important;
   }
 }
