git rid of importants

--- a/sass/_numbers.scss
+++ b/sass/_numbers.scss
@@ -41,7 +41,7 @@
         display:block;
         margin: 0 auto;
         clear: left;
-        font-weight: 400 !important;
+        font-weight: 400;
         color: white;
       }
       span.numbers__div__count{
