--- a/sass/_story-about-us.scss
+++ b/sass/_story-about-us.scss
@@ -225,7 +225,7 @@
 
       }
       &:hover img {
-        opacity: 1 !important;
+        opacity: 1;
       }
       &:hover + .about__gallery__img {
         margin-bottom: 15px;
