--- a/css/style.css
+++ b/css/style.css
@@ -845,7 +845,7 @@ body {
       -o-transition: all 0.7s ease-out;
       transition: all 0.7s ease-out; }
     #about .about__gallery--top:hover img {
-      opacity: 1 !important; }
+      opacity: 1; }
     #about .about__gallery--top:hover + .about__gallery__img {
       margin-bottom: 15px;
       margin-top: -15px;
@@ -897,7 +897,7 @@ body {
         display: block;
         margin: 0 auto;
         clear: left;
-        font-weight: 400 !important;
+        font-weight: 400;
         color: white; }
       #numbers .row .numbers__div span.numbers__div__count {
         font-family: 'Montserrat', sans-serif;
