--- a/sass/_numbers.scss
+++ b/sass/_numbers.scss
@@ -25,8 +25,8 @@
       @media(max-width:$xs){
         height:130px;
       }
-      @media(max-width:420px){
-        height: 120px;
+      @media(max-width:400px){
+        height: 100px;
       }
       &:nth-child(1){
         border-left: 1px solid white;
@@ -60,9 +60,18 @@
         @media(max-width:500px){
           font-size: 20px;
         }
+        @media(max-width:400px){
+          font-size: 15px;
+        }
 
       }
-      @media(max-width:450px){
+      span.numbers__div__description{
+        @media(max-width:400px){
+          font-size: 15px;
+        }
+
+      }
+      @media(max-width:500px){
         padding-left:1px;
         padding-right:1px;
       }
