--- a/sass/_service.scss
+++ b/sass/_service.scss
@@ -14,7 +14,17 @@
         right: 10px;
         margin-left: 10px;
         margin-bottom: 5%;
+        //@media(max-width:1300px){
+        //  width:500px;
+        //  height:320px;
+        //}
+        @media(max-width:1080px){
+          width:460px !important;
+          height:290px !important;
+        }
         @media #{$sm-screen} {
+          width:570px !important;
+          height:380px !important;
           position: relative;
           margin: 0 auto;
           right: 0;
@@ -36,7 +46,6 @@
 
       .panel-default > .panel-heading {
         padding: 0;
-        border-radius: 0;
         background-color: white;
         border: 2px solid $color-grey-middle;
         border-radius: 2px;
