--- a/sass/_story-about-us.scss
+++ b/sass/_story-about-us.scss
@@ -5,73 +5,26 @@
     margin:auto;
     margin-bottom: 5%;
     margin-top: 5%;
-    padding-left: 2%;
-
-    @media(max-width:1250px){
-      padding-left: 1%;
-    }
-    @media(max-width:1170px){
-      padding-left: 0;
-    }
-    @media(max-width:1100px){
-      padding-left: 1%;
-    }
+    //padding-left: 2%;
+    //
+    //@media(max-width:1250px){
+    //  padding-left: 1%;
+    //}
+    //@media(max-width:1170px){
+    //  padding-left: 0;
+    //}
+    //@media(max-width:1100px){
+    //  padding-left: 1%;
+    //}
     .wrapper{
 
       @media #{$xs-screen}
       {
         margin-bottom: 4%;
+        text-align: center;
       }
     }
-    @media #{$xs-screen}
-    {
-      padding-left: 27.5%;
-    }
-    @media(max-width:730px){
-      padding-left: 26.5%;
-    }
-    @media(max-width:700px){
-      padding-left: 25.5%;
-    }
-    @media(max-width:670px){
-      padding-left: 24.5%;
-    }
-    @media(max-width:640px){
-      padding-left: 22.5%;
-    }
-    @media(max-width:610px){
-      padding-left: 21.5%;
-    }
-    @media(max-width:580px){
-      padding-left: 20.5%;
-    }
-    @media(max-width:550px){
-      padding-left: 18.5%;
-    }
-    @media(max-width:520px){
-      padding-left: 16.5%;
-    }
-    @media(max-width:490px){
-      padding-left: 15.5%;
-    }
-    @media(max-width:460px){
-      padding-left: 12.5%;
-    }
-    @media(max-width:430px){
-      padding-left: 10.5%;
-    }
-    @media(max-width:400px){
-      padding-left: 8.5%;
-    }
-    @media(max-width:370px){
-      padding-left: 4.5%;
-    }
-    @media(max-width:340px){
-      padding-left: 3.5%;
-    }
-    @media(max-width:310px){
-      padding-left: 0;
-    }
+
 
 
     &__img {
@@ -79,6 +32,8 @@
       height: 250px;
       opacity: 1;
       z-index: 50;
+      margin:0 auto;
+      position: absolute;
       @media(max-width:1340px){
         width: 320px;
         height: 210px;
@@ -94,6 +49,7 @@
       }
       @media #{$sm-screen}
       {
+        display:inline-block;
         width: 230px;
         height: 150px;
       }
@@ -124,8 +80,9 @@
       height: 250px;
       opacity: 1;
       z-index: -100;
-      position: absolute;
       background-color: $color-blue;
+      margin:0 auto;
+      position: absolute;
       @media(max-width:1340px){
         width: 320px;
         height: 210px;
@@ -150,6 +107,7 @@
       }
       @media #{$xs-screen}
       {
+        display:inline-block;
         width: 230px;
         height: 150px;
       }
@@ -160,6 +118,7 @@
       opacity: 0;
       z-index: 90;
       position: absolute;
+      margin:0 auto;
       background: -webkit-linear-gradient($color-red-08, $color-yellow-08);
       background: -o-linear-gradient($color-red-08, $color-yellow-08);
       background: -moz-linear-gradient($color-red-08, $color-yellow-08);
@@ -207,11 +166,14 @@
         width: 190px;
         height: 125px;
       }
+
       @media #{$xs-screen}
       {
+        display:inline-block;
         width: 230px;
         height: 150px;
       }
+
       &:hover {
         opacity: 1;
         margin-top: -15px;
@@ -222,11 +184,12 @@
         -ms-transition: all 0.7s ease-out;
         -o-transition: all 0.7s ease-out;
         transition: all 0.7s ease-out;
-
       }
+
       &:hover img {
         opacity: 1;
       }
+
       &:hover + .about__gallery__img {
         margin-bottom: 15px;
         margin-top: -15px;
