--- a/sass/_story-about-us.scss
+++ b/sass/_story-about-us.scss
@@ -1,206 +1,94 @@
-#about {
-
+.about{
+  img {
+    border: none;
+    max-width: 100%;
+  }
   .about__gallery {
-    width:90%;
-    margin:auto;
-    margin-bottom: 5%;
-    margin-top: 5%;
-    //padding-left: 2%;
-    //
-    //@media(max-width:1250px){
-    //  padding-left: 1%;
-    //}
-    //@media(max-width:1170px){
-    //  padding-left: 0;
-    //}
-    //@media(max-width:1100px){
-    //  padding-left: 1%;
-    //}
-    .wrapper{
-
-      @media #{$xs-screen}
-      {
-        margin-bottom: 4%;
-        text-align: center;
-      }
-    }
-
-
-
-    &__img {
-      width: 380px;
-      height: 250px;
-      opacity: 1;
-      z-index: 50;
-      margin:0 auto;
-      position: absolute;
-      @media(max-width:1340px){
-        width: 320px;
-        height: 210px;
-      }
-      @media #{$md-screen}
-      {
-        width: 310px;
-        height: 200px;
-      }
-      @media(max-width:1100px){
-        width: 270px;
-        height: 175px;
-      }
-      @media #{$sm-screen}
-      {
-        display:inline-block;
-        width: 230px;
-        height: 150px;
-      }
-      @media(max-width:880px){
-        width: 190px;
-        height: 125px;
-      }
-      @media #{$xs-screen}
-      {
-        width: 230px;
-        height: 150px;
-      }
-      &--1 {
-        background: url('../img/aboutus_pic1.png');
-        background-size:cover;
-      }
-      &--2 {
-        background: url('../img/aboutus_pic2.png');
-        background-size:cover;
-      }
-      &--3 {
-        background: url('../img/aboutus_pic3.png');
-        background-size:cover;
-      }
-    }
-    &--bg {
-      width: 380px;
-      height: 250px;
-      opacity: 1;
-      z-index: -100;
-      background-color: $color-blue;
-      margin:0 auto;
-      position: absolute;
-      @media(max-width:1340px){
-        width: 320px;
-        height: 210px;
-      }
-      @media #{$md-screen}
-      {
-        width: 310px;
-        height: 200px;
-      }
-      @media(max-width:1100px){
-        width: 270px;
-        height: 175px;
-      }
-      @media #{$sm-screen}
-      {
-        width: 230px;
-        height: 150px;
-      }
-      @media(max-width:880px){
-        width: 190px;
-        height: 125px;
-      }
-      @media #{$xs-screen}
-      {
-        display:inline-block;
-        width: 230px;
-        height: 150px;
-      }
-    }
-    &--top {
-      width: 380px;
-      height: 250px;
-      opacity: 0;
-      z-index: 90;
-      position: absolute;
-      margin:0 auto;
-      background: -webkit-linear-gradient($color-red-08, $color-yellow-08);
-      background: -o-linear-gradient($color-red-08, $color-yellow-08);
-      background: -moz-linear-gradient($color-red-08, $color-yellow-08);
-      background: linear-gradient($color-red-08, $color-yellow-08);
-      img{
-
+    text-align: center;
+    &__item {
+      background: #95e1d3;
+      display: inline-block;
+      &__overlay {
         display: block;
-        margin:auto;
-        margin-top: 25%;
-        @media #{$xs-screen}
-        {
-          margin-top: 20%;
+        position: relative;
+        left: 0;
+        top: 0;
+        -webkit-transition: all .3s ease-in-out;
+        -moz-transition: all .3s ease-in-out;
+        -o-transition: all .3s ease-in-out;
+        -ms-transition: all .3s ease-in-out;
+        transition: all .3s ease-in-out;
+        &:before {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+          -webkit-transition: all .3s ease-in-out;
+          -moz-transition: all .3s ease-in-out;
+          -o-transition: all .3s ease-in-out;
+          -ms-transition: all .3s ease-in-out;
+          transition: all .3s ease-in-out;
+          background: rgba(243, 129, 129, 0.9);
+          /* fallback for old browsers */
+          /* Chrome 10-25, Safari 5.1-6 */
+          background: -webkit-linear-gradient(top, rgba(243, 129, 129, 0.9), rgba(252, 227, 138, 0.9));
+          background: -o-linear-gradient(top, rgba(243, 129, 129, 0.9), rgba(252, 227, 138, 0.9));
+          background: linear-gradient(to bottom, rgba(243, 129, 129, 0.9), rgba(252, 227, 138, 0.9));
+          /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        }
+        .content {
+          position: absolute;
+          left: 0;
+          top: 50%;
+          width: 100%;
+          z-index: 1;
+          opacity: 0;
+          text-align: center;
+          color: #fff;
+          text-transform: uppercase;
+          -webkit-transform: translateY(-50%);
+          -moz-transform: translateY(-50%);
+          -o-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
         }
       }
-
-      span{
-        text-transform: uppercase;
-        font-weight: bold;
-        color:white;
-        display:block;
-        @media #{$xs-screen}
-        {
-          margin-top: 5%;
+      &:hover .about__gallery__item__overlay {
+        left: -10px;
+        top: -10px;
+        &:before {
+          opacity: 1;
         }
       }
-      @media(max-width:1340px){
-        width: 320px;
-        height: 210px;
-      }
-      @media #{$md-screen}
-      {
-        width: 310px;
-        height: 200px;
-      }
-      @media(max-width:1100px){
-        width: 270px;
-        height: 175px;
-      }
-      @media #{$sm-screen}
-      {
-        width: 230px;
-        height: 150px;
-      }
-      @media(max-width:880px){
-        width: 190px;
-        height: 125px;
-      }
-
-      @media #{$xs-screen}
-      {
-        display:inline-block;
-        width: 230px;
-        height: 150px;
-      }
-
-      &:hover {
-        opacity: 1;
-        margin-top: -15px;
-        margin-left: -15px;
-        margin-bottom: 15px;
-        -webkit-transition: all 0.7s ease-out;
-        -moz-transition: all 0.7s ease-out;
-        -ms-transition: all 0.7s ease-out;
-        -o-transition: all 0.7s ease-out;
-        transition: all 0.7s ease-out;
-      }
-
-      &:hover img {
-        opacity: 1;
-      }
-
-      &:hover + .about__gallery__img {
-        margin-bottom: 15px;
-        margin-top: -15px;
-        margin-left: -15px;
-        -webkit-transition: all 0.7s ease-out;
-        -moz-transition: all 0.7s ease-out;
-        -ms-transition: all 0.7s ease-out;
-        -o-transition: all 0.7s ease-out;
-        transition: all 0.7s ease-out;
+      @media(max-width:$xs){
+        margin-bottom:2%;
       }
     }
 
+    .about__gallery__item:hover .content {
+      opacity: 1;
+    }
+  }
+  .content {
+    font-weight: 700;
+    font-size: 20px;
+    .icon {
+      display: block;
+      margin:0 auto;
+    }
+  }
+  @media (max-width: 992px) {
+    section {
+      padding: 45px 0;
+    }
+
+  }
+  @media (max-width: 768px) {
+    .about__gallery .about__gallery__item {
+      margin-bottom: 15px;
+    }
   }
 }
